testsuite/tests/grammar/invalid_lkt/no_grammar.lkt
from common import FooNode, Example
from lexer_example import foo_lexer
